--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,5 +28,10 @@
     <color name="customHelperColor">#FF00FF</color>
     <color name="customHintColor">#0000FF</color>
 
+    <color name="selected_tab_text_color">#477ed6</color>
+    <color name="unselected_tab_text_color">#FF000000</color>
+    <color name="indicator_color">#477ed6</color>
+    <color name="ripple_color">#ffffff</color>
+
 
 </resources>
