Style : Home 위젯 위치 및 사이즈 변경

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -78,7 +78,7 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/todaySummarySection"
                     android:layout_width="0dp"
-                    android:layout_height="400dp"
+                    android:layout_height="350dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="150dp"
                     android:layout_marginEnd="10dp"
@@ -130,8 +130,6 @@
                             android:id="@+id/progressBarLayout"
                             android:layout_width="200dp"
                             android:layout_height="200dp"
-                            android:layout_marginTop="20dp"
-                            android:layout_marginBottom="20dp"
                             app:layout_constraintBottom_toTopOf="@+id/textView13"
                             app:layout_constraintEnd_toStartOf="@+id/imageView3"
                             app:layout_constraintHeight_min="200dp"
@@ -328,11 +326,11 @@
                             android:layout_marginEnd="20dp"
                             android:layout_marginBottom="20dp"
                             android:scaleType="fitCenter"
-                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintBottom_toBottomOf="@+id/progressBarLayout"
                             app:layout_constraintEnd_toStartOf="@+id/progressBarLayout"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:srcCompat="@drawable/ic_target_calories" />
+                            app:layout_constraintTop_toTopOf="@+id/progressBarLayout"
+                            app:srcCompat="@drawable/ic_target_cal" />
 
                         <ImageView
                             android:id="@+id/imageView3"
@@ -342,10 +340,10 @@
                             android:layout_marginEnd="20dp"
                             android:layout_marginBottom="20dp"
                             android:scaleType="fitCenter"
-                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintBottom_toBottomOf="@+id/progressBarLayout"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@+id/progressBarLayout"
-                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintTop_toTopOf="@+id/progressBarLayout"
                             app:srcCompat="@drawable/ic_remaincalories" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
