Style : 플로팅 버튼 이동

--- a/app/src/main/res/layout/fragment_meal_detail.xml
+++ b/app/src/main/res/layout/fragment_meal_detail.xml
@@ -10,7 +10,6 @@
             type="com.example.fitnutrijournal.viewmodel.HomeViewModel" />
     </data>
 
-
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -37,7 +36,6 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/ic_arrow_back" />
-
 
                 <TextView
                     android:id="@+id/mealType"
@@ -80,7 +78,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:orientation="vertical">
 
@@ -189,21 +187,21 @@
                         app:layout_constraintTop_toBottomOf="@+id/foodList" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-                    android:id="@+id/btnAddFood"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:layout_marginBottom="20dp"
-                    android:text="음식 추가하기"
-                    android:textColor="@color/black"
-                    app:backgroundTint="@color/light_green"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
-
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
+
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/btnAddFood"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_marginBottom="20dp"
+            android:text="음식 추가하기"
+            android:textColor="@color/black"
+            app:backgroundTint="@color/light_green"
+            app:layout_anchor="@id/nestedScrollView"
+            app:layout_anchorGravity="bottom|center" />
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </layout>
