--- a/app/src/main/res/layout/fragment_meal_detail.xml
+++ b/app/src/main/res/layout/fragment_meal_detail.xml
@@ -43,6 +43,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:gravity="center"
+                    android:textColor="@color/text_black"
                     android:textSize="16dp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/btnBack"
@@ -112,6 +113,7 @@
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:padding="10dp"
+                        android:textColor="@color/text_black"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/carb"
@@ -124,6 +126,7 @@
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:padding="10dp"
+                        android:textColor="@color/text_black"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/protein"
@@ -136,6 +139,7 @@
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:padding="10dp"
+                        android:textColor="@color/text_black"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/fat"
@@ -148,6 +152,7 @@
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:padding="10dp"
+                        android:textColor="@color/text_black"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
