--- a/app/src/main/res/layout/fragment_diet.xml
+++ b/app/src/main/res/layout/fragment_diet.xml
@@ -154,6 +154,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
+                android:gravity="center"
                 android:textColor="@color/black"
                 app:backgroundTint="@color/light_green"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -165,6 +166,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
+                android:gravity="center"
                 android:text="음식 추가하기"
                 android:textColor="@color/black"
                 app:backgroundTint="@color/light_green"
